--- a/index.html
+++ b/index.html
@@ -677,6 +677,9 @@
             }
         }
         @media (max-width: 768px) {
+            .header-content {
+                padding-bottom: 8px;
+            }
             .nav-toggle {
                 display: block;
                 font-size: 1.5rem;
@@ -736,6 +739,9 @@
             }
         }
         @media (max-width: 576px) {
+            .header-content {
+                padding-bottom: 8px;
+            }
             .products-grid {
                 grid-template-columns: repeat(2, 1fr);
                 gap: 10px;
@@ -773,6 +779,9 @@
             }
             .header-top {
                 padding: 10px 15px; /* 调整 .header-top 的移动端内边距 */
+            }
+            .header-content {
+                padding-bottom: 8px;
             }
             .logo {
                 font-size: 1.2rem;
