--- a/index.html
+++ b/index.html
@@ -177,9 +177,11 @@
             margin-bottom: 15px;
         }
         .main-image img {
+            /* --- 修改：限制主图尺寸 --- */
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain;
+            object-fit: contain; /* 保持宽高比，完整显示 */
+            /* --- 修改结束 --- */
             cursor: pointer;
             transition: transform 0.3s;
         }
@@ -197,9 +199,11 @@
             cursor: pointer;
         }
         .thumbnail img {
+            /* --- 修改：限制缩略图尺寸 --- */
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover; /* 填充容器，可能裁剪 */
+            /* --- 修改结束 --- */
         }
         .product-info {
             flex: 1;
@@ -328,9 +332,11 @@
             overflow: hidden;
         }
         .product-card-img img {
+            /* --- 修改：限制相关推荐商品图尺寸 --- */
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover; /* 填充容器，可能裁剪 */
+            /* --- 修改结束 --- */
             transition: transform 0.3s;
         }
         .product-card:hover .product-card-img img {
@@ -717,7 +723,7 @@
             nav ul li {
                 margin: 0;
                 padding: 12px 20px;
-                border-bottom: 1px solid #eee;
+                border-bottom: none;
             }
             .products-grid {
                 grid-template-columns: repeat(2, 1fr);
@@ -1341,7 +1347,6 @@
                 memberModal.style.display = 'flex';
             });
             // --- 修改结束 ---
-
             const loginForm = document.querySelector('.login-form');
             loginForm.addEventListener('submit', function(e) {
                 e.preventDefault();
@@ -1364,7 +1369,7 @@
                 });
             });
             const searchInput = document.getElementById('search-input');
-            const searchButton = document.getElementById('search-button'); // 修改为按钮ID
+            const searchButton = document.getElementById('search-button');
             function performSearch() {
                 const query = searchInput.value.trim();
                 if (query) {
@@ -1373,7 +1378,7 @@
                     alert('请输入搜索关键词');
                 }
             }
-            if (searchButton) { // 修改为按钮点击事件
+            if (searchButton) {
                 searchButton.addEventListener('click', performSearch);
             }
             if (searchInput) {
@@ -1385,23 +1390,14 @@
             }
             const backToTopBtn = document.getElementById('backToTopBtn');
             function topFunction() {
-            // 使用 scrollIntoView 方法实现平滑滚动
                 document.body.scrollIntoView({ behavior: "smooth" });
-            // 对于某些浏览器，可能需要使用 document.documentElement
-            // document.documentElement.scrollIntoView({ behavior: "smooth" });
             }
-            // 为按钮添加点击事件监听器
             backToTopBtn.addEventListener('click', topFunction);
-
-            // --- 新增：购物车结算按钮点击事件 ---
             const checkoutBtn = document.querySelector('.checkout-btn');
             checkoutBtn.addEventListener('click', function() {
-                // 关闭购物车模态框
                 cartModal.style.display = 'none';
-                // 弹出会员登录模态框
                 memberModal.style.display = 'flex';
             });
-            // --- 新增结束 ---
         });
     </script>
 </body>
