--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <meta name="description" content="描述测试" />
     <title>标题测试</title>
     <!-- 引入 Font Awesome CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" media="print" onload="this.media='all'"/>
     <link rel="preload" as="image" href="img/2.webp" />
     <style>
       /* 重置样式 */
