--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="描述测试" />
     <title>标题测试</title>
-    <link rel="preload" as="image" href="img/2.webp" />
+    <link rel="preload" as="image" href="img/2.webp" type="image/webp" />
     <style>
       /* 重置样式 */
       * {
@@ -1113,13 +1113,7 @@
       <section class="product-detail">
         <div class="product-gallery">
           <div class="main-image">
-            <img
-              src="img/2.webp"
-              alt="主商品图片"
-              id="main-img"
-              loading="eager"
-              fetchpriority="high"
-            />
+            <img src="img/2.webp" alt="主商品图片" id="main-img" width="100%" height="100%" loading="eager" fetchpriority="high" />
           </div>
           <div class="thumbnails">
             <div class="thumbnail">
