--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
             </svg>
           </div>
           <div class="logo">
-            <img src="img/logo.png" alt="Logo" width="80" height="40" />
+            <img src="img/logo.webp" alt="PgShop" width="120" height="60" decoding="async" />
           </div>
         </div>
         <div class="search-cart">
@@ -1119,7 +1119,7 @@
             <path
               d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z" />
           </svg>
-          <span class="visually-hidden">搜索</span>
+          <span>搜索</span>
         </button>
       </div>
       <nav>
@@ -1136,7 +1136,8 @@
     <section class="product-detail">
       <div class="product-gallery">
         <div class="main-image">
-          <img src="img/2.webp" alt="主商品图片" id="main-img" />
+          <img src="img/2.webp" alt="主商品图片" id="main-img" width="100%" height="100%" loading="eager"
+            fetchpriority="high" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
@@ -1494,7 +1495,7 @@
           <path
             d="M201.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 173.3 54.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" />
         </svg>
-        <span>返回顶部</span>
+        <span>Back to top</span>
       </a>
     </div>
     <div class="footer-content">
