--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
             </svg>
           </div>
           <div class="logo">
-            <img src="img/logo.webp" alt="PgShop" width="120" height="60" decoding="async" />
+            <img src="img/logo.webp" alt="PgShop" height="60" />
           </div>
         </div>
         <div class="search-cart">
